--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-MONGODB_HOST=localhost
-MONGODB_PORT=27017
+MONGO_HOST=localhost
+MONGO_PORT=27017
 MONGO_USER=user
 MONGO_PASSWORD=password
 MONGO_DATABASE=RecipeDB
