Switch from npm ci to npm install
Replace 'npm ci' with 'npm install' for frontend setup. This change ensures that the latest dependencies are installed and built properly.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
             # Frontend setup
             cd ../frontend
             rm -rf node_modules package-lock.json
-            npm ci
+            npm install
             npm run build
           
             # Restart services
