--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "prettier": "^3.2.5",
+    "sass": "^1.81.0",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
