--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ pydantic~=2.9.2
 pymongo~=4.9.2
 pytest-asyncio~=0.24.0
 pytest~=8.3.3
+pytest-cov~=6.0.0
 python-dotenv~=1.0.1
 setuptools~=75.3.0
 starlette~=0.41.2
